reference/5.1/Microsoft.PowerShell.Utility/Export-Clixml.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,applet de commande
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 08/14/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/export-clixml?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Export-Clixml
ms.openlocfilehash: 8485591165cce0425c85d52fbd31d40614af6249
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: fr-FR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93203318"
---
# <span data-ttu-id="27603-103">Export-Clixml</span><span class="sxs-lookup"><span data-stu-id="27603-103">Export-Clixml</span></span>

## <span data-ttu-id="27603-104">SYNOPSIS</span><span class="sxs-lookup"><span data-stu-id="27603-104">SYNOPSIS</span></span>
<span data-ttu-id="27603-105">Crée une représentation XML d'un ou plusieurs objets et la stocke dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="27603-105">Creates an XML-based representation of an object or objects and stores it in a file.</span></span>

## <span data-ttu-id="27603-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="27603-106">SYNTAX</span></span>

### <span data-ttu-id="27603-107">ByPath (par défaut)</span><span class="sxs-lookup"><span data-stu-id="27603-107">ByPath (Default)</span></span>

```
Export-Clixml [-Path] <String> -InputObject <PSObject> [-Depth <Int32>] [-Force] [-NoClobber]
 [-Encoding <String>] [-WhatIf] [-Confirm] [<CommonParameters>]
```

### <span data-ttu-id="27603-108">ByLiteralPath</span><span class="sxs-lookup"><span data-stu-id="27603-108">ByLiteralPath</span></span>

```
Export-Clixml -LiteralPath <String> -InputObject <PSObject> [-Depth <Int32>] [-Force] [-NoClobber]
 [-Encoding <String>] [-WhatIf] [-Confirm] [<CommonParameters>]
```

## <span data-ttu-id="27603-109">Description</span><span class="sxs-lookup"><span data-stu-id="27603-109">DESCRIPTION</span></span>

<span data-ttu-id="27603-110">L' `Export-Clixml` applet de commande crée une représentation XML Common Language Infrastructure (CLI) d’un ou de tous les objets et le stocke dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="27603-110">The `Export-Clixml` cmdlet creates a Common Language Infrastructure (CLI) XML-based representation of an object or objects and stores it in a file.</span></span> <span data-ttu-id="27603-111">Vous pouvez ensuite utiliser l' `Import-Clixml` applet de commande pour recréer l’objet enregistré en fonction du contenu de ce fichier.</span><span class="sxs-lookup"><span data-stu-id="27603-111">You can then use the `Import-Clixml` cmdlet to recreate the saved object based on the contents of that file.</span></span>
<span data-ttu-id="27603-112">Pour plus d’informations sur l’interface CLI, consultez [indépendance du langage](/dotnet/standard/language-independence).</span><span class="sxs-lookup"><span data-stu-id="27603-112">For more information about CLI, see [Language independence](/dotnet/standard/language-independence).</span></span>

<span data-ttu-id="27603-113">Cette applet de commande est semblable à `ConvertTo-Xml` , à ceci près que `Export-Clixml` stocke les données XML résultantes dans un fichier.</span><span class="sxs-lookup"><span data-stu-id="27603-113">This cmdlet is similar to `ConvertTo-Xml`, except that `Export-Clixml` stores the resulting XML in a file.</span></span> <span data-ttu-id="27603-114">`ConvertTo-XML` retourne le code XML, ce qui vous permet de continuer à le traiter dans PowerShell.</span><span class="sxs-lookup"><span data-stu-id="27603-114">`ConvertTo-XML` returns the XML, so you can continue to process it in PowerShell.</span></span>

<span data-ttu-id="27603-115">Une utilisation intéressante de `Export-Clixml` sur les ordinateurs Windows consiste à exporter les informations d’identification et à sécuriser les chaînes en toute sécurité au format XML.</span><span class="sxs-lookup"><span data-stu-id="27603-115">A valuable use of `Export-Clixml` on Windows computers is to export credentials and secure strings securely as XML.</span></span> <span data-ttu-id="27603-116">Pour obtenir un exemple, consultez l’exemple 3.</span><span class="sxs-lookup"><span data-stu-id="27603-116">For an example, see Example 3.</span></span>

## <span data-ttu-id="27603-117">EXEMPLES</span><span class="sxs-lookup"><span data-stu-id="27603-117">EXAMPLES</span></span>

### <span data-ttu-id="27603-118">Exemple 1 : exporter une chaîne dans un fichier XML</span><span class="sxs-lookup"><span data-stu-id="27603-118">Example 1: Export a string to an XML file</span></span>

<span data-ttu-id="27603-119">Cet exemple crée un fichier XML qui stocke dans le répertoire actif, une représentation de la chaîne qu' **il s’agit d’un test** .</span><span class="sxs-lookup"><span data-stu-id="27603-119">This example creates an XML file that stores in the current directory, a representation of the string **This is a test** .</span></span>

```powershell
"This is a test" | Export-Clixml -Path .\sample.xml
```

<span data-ttu-id="27603-120">La chaîne qu' **il s’agit d’un test** est envoyée dans le pipeline.</span><span class="sxs-lookup"><span data-stu-id="27603-120">The string **This is a test** is sent down the pipeline.</span></span> <span data-ttu-id="27603-121">`Export-Clixml` utilise le paramètre **path** pour créer un fichier XML nommé `sample.xml` dans le répertoire actif.</span><span class="sxs-lookup"><span data-stu-id="27603-121">`Export-Clixml` uses the **Path** parameter to create an XML file named `sample.xml` in the current directory.</span></span>

### <span data-ttu-id="27603-122">Exemple 2 : exporter un objet dans un fichier XML</span><span class="sxs-lookup"><span data-stu-id="27603-122">Example 2: Export an object to an XML file</span></span>

<span data-ttu-id="27603-123">Cet exemple montre comment exporter un objet vers un fichier XML, puis créer un objet en important le contenu XML du fichier.</span><span class="sxs-lookup"><span data-stu-id="27603-123">This example shows how to export an object to an XML file and then create an object by importing the XML from the file.</span></span>

```powershell
Get-Acl C:\test.txt | Export-Clixml -Path .\FileACL.xml
$fileacl = Import-Clixml -Path .\FileACL.xml
```

<span data-ttu-id="27603-124">L' `Get-Acl` applet de commande obtient le descripteur de sécurité du `Test.txt` fichier.</span><span class="sxs-lookup"><span data-stu-id="27603-124">The `Get-Acl` cmdlet gets the security descriptor of the `Test.txt` file.</span></span> <span data-ttu-id="27603-125">Il envoie l’objet dans le pipeline pour lui transmettre le descripteur de sécurité `Export-Clixml` .</span><span class="sxs-lookup"><span data-stu-id="27603-125">It sends the object down the pipeline to pass the security descriptor to `Export-Clixml`.</span></span> <span data-ttu-id="27603-126">La représentation XML de l’objet est stockée dans un fichier nommé `FileACL.xml` .</span><span class="sxs-lookup"><span data-stu-id="27603-126">The XML-based representation of the object is stored in a file named `FileACL.xml`.</span></span>

<span data-ttu-id="27603-127">L' `Import-Clixml` applet de commande crée un objet à partir du code XML dans le `FileACL.xml` fichier.</span><span class="sxs-lookup"><span data-stu-id="27603-127">The `Import-Clixml` cmdlet creates an object from the XML in the `FileACL.xml` file.</span></span> <span data-ttu-id="27603-128">Ensuite, il enregistre l’objet dans la `$fileacl` variable.</span><span class="sxs-lookup"><span data-stu-id="27603-128">Then, it saves the object in the `$fileacl` variable.</span></span>

### <span data-ttu-id="27603-129">Exemple 3 : chiffrer un objet d’informations d’identification exporté</span><span class="sxs-lookup"><span data-stu-id="27603-129">Example 3: Encrypt an exported credential object</span></span>

<span data-ttu-id="27603-130">Dans cet exemple, étant donné les informations d’identification que vous avez stockées dans la `$Credential` variable en exécutant l' `Get-Credential` applet de commande, vous pouvez exécuter l' `Export-Clixml` applet de commande pour enregistrer les informations d’identification sur le disque.</span><span class="sxs-lookup"><span data-stu-id="27603-130">In this example, given a credential that you've stored in the `$Credential` variable by running the `Get-Credential` cmdlet, you can run the `Export-Clixml` cmdlet to save the credential to disk.</span></span>

> [!IMPORTANT]
> <span data-ttu-id="27603-131">`Export-Clixml` exporte uniquement les informations d’identification chiffrées sur Windows.</span><span class="sxs-lookup"><span data-stu-id="27603-131">`Export-Clixml` only exports encrypted credentials on Windows.</span></span> <span data-ttu-id="27603-132">Sur les systèmes d’exploitation autres que Windows, tels que macOS et Linux, les informations d’identification sont exportées en texte brut.</span><span class="sxs-lookup"><span data-stu-id="27603-132">On non-Windows operating systems such as macOS and Linux, credentials are exported in plain text.</span></span>

```powershell
$Credxmlpath = Join-Path (Split-Path $Profile) TestScript.ps1.credential
$Credential | Export-Clixml $Credxmlpath
$Credxmlpath = Join-Path (Split-Path $Profile) TestScript.ps1.credential
$Credential = Import-Clixml $Credxmlpath
```

<span data-ttu-id="27603-133">L' `Export-Clixml` applet de commande chiffre les objets d’informations d’identification à l’aide de l' [API de protection des données](/previous-versions/windows/apps/hh464970(v=win.10))Windows.</span><span class="sxs-lookup"><span data-stu-id="27603-133">The `Export-Clixml` cmdlet encrypts credential objects by using the Windows [Data Protection API](/previous-versions/windows/apps/hh464970(v=win.10)).</span></span>
<span data-ttu-id="27603-134">Le chiffrement garantit que seul votre compte d’utilisateur sur cet ordinateur peut déchiffrer le contenu de l’objet d’informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="27603-134">The encryption ensures that only your user account on only that computer can decrypt the contents of the credential object.</span></span> <span data-ttu-id="27603-135">Le `CLIXML` fichier exporté ne peut pas être utilisé sur un autre ordinateur ou un autre utilisateur.</span><span class="sxs-lookup"><span data-stu-id="27603-135">The exported `CLIXML` file can't be used on a different computer or by a different user.</span></span>

<span data-ttu-id="27603-136">Dans l’exemple, le fichier dans lequel les informations d’identification sont stockées est représenté par `TestScript.ps1.credential` .</span><span class="sxs-lookup"><span data-stu-id="27603-136">In the example, the file in which the credential is stored is represented by `TestScript.ps1.credential`.</span></span> <span data-ttu-id="27603-137">Remplacez **TestScript** par le nom du script avec lequel vous chargez les informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="27603-137">Replace **TestScript** with the name of the script with which you're loading the credential.</span></span>

<span data-ttu-id="27603-138">Vous envoyez l’objet d’informations d’identification dans le pipeline à `Export-Clixml` et l’enregistrez dans le chemin d’accès, `$Credxmlpath` , que vous avez spécifié dans la première commande.</span><span class="sxs-lookup"><span data-stu-id="27603-138">You send the credential object down the pipeline to `Export-Clixml`, and save it to the path, `$Credxmlpath`, that you specified in the first command.</span></span>

<span data-ttu-id="27603-139">Pour importer automatiquement les informations d’identification dans votre script, exécutez les deux commandes finales.</span><span class="sxs-lookup"><span data-stu-id="27603-139">To import the credential automatically into your script, run the final two commands.</span></span> <span data-ttu-id="27603-140">Exécutez `Import-Clixml` pour importer l’objet d’informations d’identification sécurisé dans votre script.</span><span class="sxs-lookup"><span data-stu-id="27603-140">Run `Import-Clixml` to import the secured credential object into your script.</span></span> <span data-ttu-id="27603-141">Cette importation élimine le risque d’exposer les mots de passe en texte brut dans votre script.</span><span class="sxs-lookup"><span data-stu-id="27603-141">This import eliminates the risk of exposing plain-text passwords in your script.</span></span>

## <span data-ttu-id="27603-142">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="27603-142">PARAMETERS</span></span>

### <span data-ttu-id="27603-143">-Confirm</span><span class="sxs-lookup"><span data-stu-id="27603-143">-Confirm</span></span>

<span data-ttu-id="27603-144">Vous demande une confirmation avant d’exécuter l’applet de commande.</span><span class="sxs-lookup"><span data-stu-id="27603-144">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="27603-145">-Profondeur</span><span class="sxs-lookup"><span data-stu-id="27603-145">-Depth</span></span>

<span data-ttu-id="27603-146">Spécifie le nombre de niveaux d'objets contenus inclus dans la représentation XML.</span><span class="sxs-lookup"><span data-stu-id="27603-146">Specifies how many levels of contained objects are included in the XML representation.</span></span> <span data-ttu-id="27603-147">La valeur par défaut est `2`.</span><span class="sxs-lookup"><span data-stu-id="27603-147">The default value is `2`.</span></span>

<span data-ttu-id="27603-148">La valeur par défaut peut être remplacée par le type d’objet dans les `Types.ps1xml` fichiers.</span><span class="sxs-lookup"><span data-stu-id="27603-148">The default value can be overridden for the object type in the `Types.ps1xml` files.</span></span> <span data-ttu-id="27603-149">Pour plus d’informations, consultez [about_Types.ps1XML](../Microsoft.PowerShell.Core/About/about_Types.ps1xml.md).</span><span class="sxs-lookup"><span data-stu-id="27603-149">For more information, see [about_Types.ps1xml](../Microsoft.PowerShell.Core/About/about_Types.ps1xml.md).</span></span>

```yaml
Type: System.Int32
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: 2
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="27603-150">-Encoding</span><span class="sxs-lookup"><span data-stu-id="27603-150">-Encoding</span></span>

<span data-ttu-id="27603-151">Spécifie le type de codage du fichier cible.</span><span class="sxs-lookup"><span data-stu-id="27603-151">Specifies the type of encoding for the target file.</span></span> <span data-ttu-id="27603-152">La valeur par défaut est **Unicode** .</span><span class="sxs-lookup"><span data-stu-id="27603-152">The default value is **Unicode** .</span></span>

<span data-ttu-id="27603-153">Les valeurs acceptables pour ce paramètre sont les suivantes :</span><span class="sxs-lookup"><span data-stu-id="27603-153">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="27603-154">`ASCII` Utilise le jeu de caractères ASCII (7 bits).</span><span class="sxs-lookup"><span data-stu-id="27603-154">`ASCII` Uses ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="27603-155">`BigEndianUnicode` Utilise UTF-16 avec l’ordre des octets de poids fort (Big-endian).</span><span class="sxs-lookup"><span data-stu-id="27603-155">`BigEndianUnicode` Uses UTF-16 with the big-endian byte order.</span></span>
- <span data-ttu-id="27603-156">`Default` Utilise l’encodage qui correspond à la page de codes active du système (généralement ANSI).</span><span class="sxs-lookup"><span data-stu-id="27603-156">`Default` Uses the encoding that corresponds to the system's active code page (usually ANSI).</span></span>
- <span data-ttu-id="27603-157">`OEM` Utilise l’encodage qui correspond à la page de codes OEM actuelle du système.</span><span class="sxs-lookup"><span data-stu-id="27603-157">`OEM` Uses the encoding that corresponds to the system's current OEM code page.</span></span>
- <span data-ttu-id="27603-158">`Unicode` Utilise UTF-16 avec l’ordre de primauté des octets de poids faible (Little-endian).</span><span class="sxs-lookup"><span data-stu-id="27603-158">`Unicode` Uses UTF-16 with the little-endian byte order.</span></span>
- <span data-ttu-id="27603-159">`UTF7` Utilise UTF-7.</span><span class="sxs-lookup"><span data-stu-id="27603-159">`UTF7` Uses UTF-7.</span></span>
- <span data-ttu-id="27603-160">`UTF8` Utilise UTF-8.</span><span class="sxs-lookup"><span data-stu-id="27603-160">`UTF8` Uses UTF-8.</span></span>
- <span data-ttu-id="27603-161">`UTF32` Utilise UTF-32 avec l’ordre de primauté des octets de poids faible (Little-endian).</span><span class="sxs-lookup"><span data-stu-id="27603-161">`UTF32` Uses UTF-32 with the little-endian byte order.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, Default, OEM, Unicode, UTF7, UTF8, UTF32

Required: False
Position: Named
Default value: Unicode
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="27603-162">-Force</span><span class="sxs-lookup"><span data-stu-id="27603-162">-Force</span></span>

<span data-ttu-id="27603-163">Force l’exécution de la commande sans demander la confirmation de l’utilisateur.</span><span class="sxs-lookup"><span data-stu-id="27603-163">Forces the command to run without asking for user confirmation.</span></span>

<span data-ttu-id="27603-164">Indique à l'applet de commande d'effacer l'attribut de lecture seule du fichier de sortie, si nécessaire.</span><span class="sxs-lookup"><span data-stu-id="27603-164">Causes the cmdlet to clear the read-only attribute of the output file if necessary.</span></span> <span data-ttu-id="27603-165">L'applet de commande tente de réinitialiser l'attribut de lecture seule à la fin de l'exécution de la commande.</span><span class="sxs-lookup"><span data-stu-id="27603-165">The cmdlet will attempt to reset the read-only attribute when the command completes.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="27603-166">-InputObject</span><span class="sxs-lookup"><span data-stu-id="27603-166">-InputObject</span></span>

<span data-ttu-id="27603-167">Spécifie l'objet à convertir.</span><span class="sxs-lookup"><span data-stu-id="27603-167">Specifies the object to be converted.</span></span> <span data-ttu-id="27603-168">Entrez une variable contenant les objets, ou tapez une commande ou une expression qui obtient ces objets.</span><span class="sxs-lookup"><span data-stu-id="27603-168">Enter a variable that contains the objects, or type a command or expression that gets the objects.</span></span> <span data-ttu-id="27603-169">Vous pouvez également diriger les objets vers `Export-Clixml` .</span><span class="sxs-lookup"><span data-stu-id="27603-169">You can also pipe objects to `Export-Clixml`.</span></span>

```yaml
Type: System.Management.Automation.PSObject
Parameter Sets: (All)
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="27603-170">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="27603-170">-LiteralPath</span></span>

<span data-ttu-id="27603-171">Spécifie le chemin d'accès du fichier où sera stockée la représentation XML de l'objet.</span><span class="sxs-lookup"><span data-stu-id="27603-171">Specifies the path to the file where the XML representation of the object will be stored.</span></span> <span data-ttu-id="27603-172">Contrairement à **path** , la valeur du paramètre **LiteralPath** est utilisée exactement telle qu’elle est tapée.</span><span class="sxs-lookup"><span data-stu-id="27603-172">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it's typed.</span></span> <span data-ttu-id="27603-173">Aucun caractère n’est interprété en tant que caractère générique.</span><span class="sxs-lookup"><span data-stu-id="27603-173">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="27603-174">Si le chemin d’accès inclut des caractères d’échappement, mettez-le entre des guillemets simples.</span><span class="sxs-lookup"><span data-stu-id="27603-174">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="27603-175">Les guillemets simples indiquent à PowerShell qu’il n’est pas possible d’interpréter les caractères comme des séquences d’échappement.</span><span class="sxs-lookup"><span data-stu-id="27603-175">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String
Parameter Sets: ByLiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="27603-176">-NoClobber</span><span class="sxs-lookup"><span data-stu-id="27603-176">-NoClobber</span></span>

<span data-ttu-id="27603-177">Indique que l’applet de commande ne remplace pas le contenu d’un fichier existant.</span><span class="sxs-lookup"><span data-stu-id="27603-177">Indicates that the cmdlet doesn't overwrite the contents of an existing file.</span></span> <span data-ttu-id="27603-178">Par défaut, si un fichier existe dans le chemin d’accès spécifié, `Export-Clixml` remplace le fichier sans avertissement.</span><span class="sxs-lookup"><span data-stu-id="27603-178">By default, if a file exists in the specified path, `Export-Clixml` overwrites the file without warning.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: NoOverwrite

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="27603-179">-Path</span><span class="sxs-lookup"><span data-stu-id="27603-179">-Path</span></span>

<span data-ttu-id="27603-180">Spécifie le chemin d'accès du fichier où sera stockée la représentation XML de l'objet.</span><span class="sxs-lookup"><span data-stu-id="27603-180">Specifies the path to the file where the XML representation of the object will be stored.</span></span>

```yaml
Type: System.String
Parameter Sets: ByPath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="27603-181">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="27603-181">-WhatIf</span></span>

<span data-ttu-id="27603-182">Montre ce qui se passe en cas d’exécution de l’applet de commande.</span><span class="sxs-lookup"><span data-stu-id="27603-182">Shows what would happen if the cmdlet runs.</span></span> <span data-ttu-id="27603-183">L’applet de commande n’est pas exécutée.</span><span class="sxs-lookup"><span data-stu-id="27603-183">The cmdlet isn't run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="27603-184">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="27603-184">CommonParameters</span></span>

<span data-ttu-id="27603-185">Cette applet de commande prend en charge les paramètres courants : -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction et -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="27603-185">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="27603-186">Pour plus d’informations, consultez [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="27603-186">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="27603-187">ENTRÉES</span><span class="sxs-lookup"><span data-stu-id="27603-187">INPUTS</span></span>

### <span data-ttu-id="27603-188">System. Management. Automation. PSObject</span><span class="sxs-lookup"><span data-stu-id="27603-188">System.Management.Automation.PSObject</span></span>

<span data-ttu-id="27603-189">Vous pouvez effectuer un pipeline de n’importe quel objet vers `Export-Clixml` .</span><span class="sxs-lookup"><span data-stu-id="27603-189">You can pipeline any object to `Export-Clixml`.</span></span>

## <span data-ttu-id="27603-190">SORTIES</span><span class="sxs-lookup"><span data-stu-id="27603-190">OUTPUTS</span></span>

### <span data-ttu-id="27603-191">System. IO. FileInfo</span><span class="sxs-lookup"><span data-stu-id="27603-191">System.IO.FileInfo</span></span>

<span data-ttu-id="27603-192">`Export-Clixml` crée un fichier qui contient le XML.</span><span class="sxs-lookup"><span data-stu-id="27603-192">`Export-Clixml` creates a file that contains the XML.</span></span>

## <span data-ttu-id="27603-193">REMARQUES</span><span class="sxs-lookup"><span data-stu-id="27603-193">NOTES</span></span>

## <span data-ttu-id="27603-194">LIENS CONNEXES</span><span class="sxs-lookup"><span data-stu-id="27603-194">RELATED LINKS</span></span>

[<span data-ttu-id="27603-195">ConvertTo-Html</span><span class="sxs-lookup"><span data-stu-id="27603-195">ConvertTo-Html</span></span>](ConvertTo-Html.md)

[<span data-ttu-id="27603-196">ConvertTo-Xml</span><span class="sxs-lookup"><span data-stu-id="27603-196">ConvertTo-Xml</span></span>](ConvertTo-Xml.md)

[<span data-ttu-id="27603-197">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="27603-197">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="27603-198">Import-Clixml</span><span class="sxs-lookup"><span data-stu-id="27603-198">Import-Clixml</span></span>](Import-Clixml.md)

[<span data-ttu-id="27603-199">Join-Path</span><span class="sxs-lookup"><span data-stu-id="27603-199">Join-Path</span></span>](../Microsoft.PowerShell.Management/Join-Path.md)

[<span data-ttu-id="27603-200">Stocker en toute sécurité les informations d’identification sur le disque</span><span class="sxs-lookup"><span data-stu-id="27603-200">Securely Store Credentials on Disk</span></span>](https://powershellcookbook.com/recipe/PukO/securely-store-credentials-on-disk)

[<span data-ttu-id="27603-201">Utiliser PowerShell pour transmettre des informations d’identification à des systèmes hérités</span><span class="sxs-lookup"><span data-stu-id="27603-201">Use PowerShell to Pass Credentials to Legacy Systems</span></span>](https://devblogs.microsoft.com/scripting/use-powershell-to-pass-credentials-to-legacy-systems/)

[<span data-ttu-id="27603-202">Windows.Security.Cryptography.DataProtection</span><span class="sxs-lookup"><span data-stu-id="27603-202">Windows.Security.Cryptography.DataProtection</span></span>](/uwp/api/windows.security.cryptography.dataprotection)
